recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:16: error: not found: value lenght
    avance(lenght)
           ^